xử lý hệ thống lại BE xoá những file không cần thiết